--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "deprm",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "src/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "node src/bot.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "croxydb": "^0.0.7",
     "discord.js": "^13.12.0",
     "discord.js-selfbot-v13": "^2.10.1",
+    "dotenv": "^16.0.3",
     "tmi.js": "^1.8.5"
   }
 }
