--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.2",
     "console.table": "^0.10.0",
-    "croxydb": "^0.0.7",
     "discord.js": "^13.12.0",
-    "discord.js-selfbot-v13": "^2.10.1",
-    "dotenv": "^16.0.3",
-    "tmi.js": "^1.8.5"
+    "dotenv": "^16.0.3"
   }
 }
